--- a/Back/package.json
+++ b/Back/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.0.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.16",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
